# gignest-api

./: .gitignore  Cargo.toml
api/: .gitignore  Cargo.toml
api/db/src/: lib.rs
api/gateway/src/: router.rs
api/migrations/: 20251212135354_init.sql  20251221192315_enums.sql  20251221234405_init.sql
api/modules/auth/src/: handlers.rs  routes.rs
api/src/: main.rs
api/src/authentication/: forgot_password.rs  login.rs  mod.rs
api/src/routes/: mod.rs
db/: Cargo.toml
domain/: Cargo.toml
domain/src/: enums.rs
gateway/: Cargo.toml
migrations/: 20251221192315_enums.sql  20251221234405_init.sql
modules/: Cargo.toml
modules/auth/: Cargo.toml
server/: Cargo.toml
server/src/: main.rs
