# [package]
# name = "api"
# version = "0.1.0"
# edition = "2024"

# [dependencies]
# axum = "0.8.7"
# serde = { version = "1", features = ["derive"] }
# serde_json = "1"
# tokio = { version = "1", features = ["full"] }
# # sqlx = { version = "0.8.6", features = ["postgres", "chrono", "runtime-tokio"] }
# chrono = { version = "0.4", features = ["serde"] }
# # dotenvy = "0.15"
# # anyhow = "1"
# tracing = "0.1.44"
# validator = { version = "0.20.0", features = ["derive"] }
# rand = "0.9.2"
# sha2 = "0.10"
# jsonwebtoken = "9.3.1"
# password-hash = "0.5.0"
# resend-rs = "0.19.0"
# reqwest = { version = "0.12.28", features = ["json", "__tls"] }
# time = "0.3"

[workspace]
resolver = "2"
members = [
  "db",
  "domain",
  "gateway",
  "modules/auth",
  "server",
]

[workspace.dependencies]
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
anyhow = "1"
dotenvy = "0.15"