[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
validator = { version = "0.20.0", features = ["derive"] }
rand = "0.9.2"
sha2 = "0.10"
jsonwebtoken = "9.3.1"
password-hash = "0.5.0"
resend-rs = "0.19.0"
reqwest = { version = "0.12.28", features = ["json", "__tls"] }
time = "0.3"

domain = { path= "../../domain"}